initial OAuth test commit

--- a/Hammond-SPA/src/index.html
+++ b/Hammond-SPA/src/index.html
@@ -5,6 +5,8 @@
   <title>HammondSPA</title>
   <base href="/">
 
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="895802835353-vt5psohoekdpmjs4bto23m2rne2gkmdg.apps.googleusercontent.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="../node_modules/alertifyjs/build/css/themes/bootstrap.min.css" rel="stylesheet" type="text/css">
